--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,23 @@
-org.gradle.jvmargs=-Xmx4G
+# Done to increase the memory available to Gradle.
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+
+# Mod properties
+mod_version=1.2.0
+maven_group=com.starlotte
+archives_name=cobblemon-move-inspector
+enabled_platforms=fabric,neoforge
+
+# Minecraft properties
+minecraft_version=1.21.1
+
+# Dependencies
+fabric_loader_version=0.16.9
+fabric_api_version=0.108.0+1.21.1
+fabric_language_kotlin_version=1.12.1+kotlin.2.0.20
+
+architectury_api_version = 13.0.6
+
+neoforge_version=21.1.80
+kotlin_forge_version=5.5.0
+kff_version_range=[5.5.0,)
