--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,7 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
 
-rootProject.name = 'cobblemon_move_inspector'
+rootProject.name = 'CobblemonMoveInspector'
 
 include 'common'
 include 'fabric'
