--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -29,6 +29,7 @@ repositories {
     maven { url = "https://maven.impactdev.net/repository/development/" }
     maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
     maven { url = "https://cursemaven.com" }
+    maven { url = "https://api.modrinth.com/maven" }
     mavenCentral()
 
     maven {
@@ -47,7 +48,7 @@ dependencies {
 
     modImplementation "dev.architectury:architectury-neoforge:$rootProject.architectury_api_version"
 
-    modImplementation "com.cobblemon:neoforge:1.6.1+1.21.1"
+    modImplementation "maven.modrinth:cobblemon:1.7.0"
 
 //    modImplementation "curse.maven:gravelmon-928129:5337260" // GRAVELMON NOT UPDATED AT THIS TIME
 //    modImplementation "curse.maven:gravels-extended-battles-930317:5337280" // GRAVELMON NOT UPDATED AT THIS TIME
