--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     // Do NOT use other classes from Fabric Loader.
     modImplementation   "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
 
-    modCompileOnly "net.fabricmc:fabric-language-kotlin:1.13.0+kotlin.2.1.0"
+    modCompileOnly "net.fabricmc:fabric-language-kotlin:${rootProject.fabric_language_kotlin_version}"
     modCompileOnly "com.cobblemon:fabric:1.6.1+1.21.1"
 
 //    modCompileOnly "com.cobblemon:neoforge:1.6.1+1.21.1"
